# fastapi-sqlalchemy-pytest-example

./: .gitignore  README.md
app/: .env.example  .env.test  Dockerfile  docker-compose.yaml  pyproject.toml
app/src/: config.py  main.py
app/src/core/models/: __init__.py  post.py  user.py
app/src/core/schemas/: post.py  user.py
app/src/database/: manager.py
app/tests/: conftest.py  model_factories.py
app/tests/integration_tests/: test_app.py
